--- a/mosquitto/auth_backends/POSTGRES/mosquitto.conf
+++ b/mosquitto/auth_backends/POSTGRES/mosquitto.conf
@@ -1,15 +1,14 @@
 user root
 auth_plugin /usr/local/lib/auth-plug.so
-auth_opt_backends mysql
-auth_opt_host mariadb
-auth_opt_port 3306
+auth_opt_backends postgres
+auth_opt_host postgres
+auth_opt_port 5432
 auth_opt_dbname mosquitto-auth
 auth_opt_user root
 auth_opt_pass test123
-auth_opt_userquery SELECT pw FROM users WHERE username = '%s'
-auth_opt_superquery SELECT COUNT(*) FROM users WHERE username = '%s' AND super = 1
-auth_opt_aclquery SELECT topic FROM acls WHERE (username = '%s') AND (rw >= %d)
-auth_opt_anonusername AnonymouS
+auth_opt_userquery SELECT pw FROM users WHERE username = $1 limit 1
+auth_opt_superquery SELECT COALESCE(COUNT(*),0) FROM users WHERE username = $1 AND super = 1
+auth_opt_aclquery SELECT topic FROM acls WHERE (username = $1) AND (rw & $2) > 0
 listener 8883
 cafile /etc/mosquitto/certs/ca.crt
 certfile /etc/mosquitto/certs/server.crt
